--- a/css/style.css
+++ b/css/style.css
@@ -13,21 +13,61 @@ body {
   margin: 0;
   top: 0;
   left: 0;
-  transition: margin-left .5s ease-in-out 0s;
+  -webkit-transition: margin-left 0.5s ease-in-out 0s;
+  -moz-transition: margin-left 0.5s ease-in-out 0s;
+  -o-transition: margin-left 0.5s ease-in-out 0s;
+  transition: margin-left 0.5s ease-in-out 0s;
   box-shadow: -2px 2px 30px #333333; }
+  #viewport #close-nav {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 200; }
   #viewport.nav-open {
-    margin-left: 45%; }
+    margin-left: 50%; }
+    @media only screen and (min-width: 1025px) {
+      #viewport.nav-open {
+        margin-left: 30%; } }
+    #viewport.nav-open #close-nav {
+      display: block; }
+
+.page {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: opacity 0.5s ease-in-out 0s;
+  -moz-transition: opacity 0.5s ease-in-out 0s;
+  -o-transition: opacity 0.5s ease-in-out 0s;
+  transition: opacity 0.5s ease-in-out 0s;
+  opacity: 1;
+  padding-top: 100px; }
+  .page.hidden {
+    z-index: -1;
+    opacity: 0; }
+  .page.show {
+    z-index: 1; }
 
 #nav-menu {
   display: block;
   position: absolute;
-  width: 45%;
+  width: 50%;
   height: 100%;
   top: 0px;
   left: 0px;
   padding-top: 80px;
-  margin-left: -45%;
-  transition: margin-left .5s ease-in-out 0s; }
+  margin-left: -50%;
+  -webkit-transition: margin-left 0.5s ease-in-out 0s;
+  -moz-transition: margin-left 0.5s ease-in-out 0s;
+  -o-transition: margin-left 0.5s ease-in-out 0s;
+  transition: margin-left 0.5s ease-in-out 0s; }
+  @media only screen and (min-width: 1025px) {
+    #nav-menu {
+      width: 30%;
+      margin-left: -30%; } }
   #nav-menu a {
     display: block;
     color: #333;
@@ -52,19 +92,5 @@ body {
     left: 10px;
     top: 20px;
     cursor: pointer; }
-
-.page {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: opacity .5s ease-in-out 0s;
-  opacity: 1;
-  padding-top: 100px; }
-  .page.hidden {
-    z-index: -1;
-    opacity: 0; }
-  .page.show {
-    z-index: 1; }
 
 /*# sourceMappingURL=style.css.map */
