--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,8 @@
-$menu-width: 45%;
+@import 'mixins';
+
+// variables
+$menu-width: 50%;
+$menu-desktop-width: 30%;
 
 body {
 	margin: 0;
@@ -16,10 +20,42 @@ body {
 	margin: 0;
 	top: 0;
 	left: 0;
-	transition: margin-left .5s ease-in-out 0s;
+	@include transition( margin-left, .5s, ease-in-out, 0s );
 	box-shadow: -2px 2px 30px #333333;
+	#close-nav {
+		display: none;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+		z-index: 200;
+	}
 	&.nav-open {
 		margin-left: $menu-width;
+		@media #{$desktop-only} {
+			margin-left: $menu-desktop-width;
+		}
+		#close-nav {
+			display: block;
+		}
+	}
+}
+
+.page {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	@include transition( opacity, .5s, ease-in-out, 0s );
+	opacity: 1;
+	padding-top: 100px;
+	&.hidden {
+		z-index: -1;
+		opacity: 0;
+	}
+	&.show {
+		z-index: 1;
 	}
 }
 
@@ -32,7 +68,11 @@ body {
 	left: 0px;
 	padding-top: 80px;
 	margin-left: -$menu-width;
-	transition: margin-left .5s ease-in-out 0s;
+	@include transition( margin-left, .5s, ease-in-out, 0s );
+	@media #{$desktop-only} {
+		width: $menu-desktop-width;
+		margin-left: -$menu-desktop-width;
+	}
 	a {
 		display: block;
 		color: #333;
@@ -61,22 +101,5 @@ body {
 		left: 10px;
 		top: 20px;
 		cursor: pointer;
-	}
-}
-
-.page {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	transition: opacity .5s ease-in-out 0s;
-	opacity: 1;
-	padding-top: 100px;
-	&.hidden {
-		z-index: -1;
-		opacity: 0;
-	}
-	&.show {
-		z-index: 1;
 	}
 }
