--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,9 @@
 @import 'mixins';
 
 // variables
+$hdr-height: 80px;
+$hdr-status-bar: 20px;
+$hdr-body-height: $hdr-height - $hdr-status-bar;
 $menu-width: 50%;
 $menu-desktop-width: 30%;
 
@@ -47,9 +50,10 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	@include transition( opacity, .5s, ease-in-out, 0s );
 	opacity: 1;
-	padding-top: 100px;
+	padding: $hdr-height + 20px 20px 0;
+	@include transition( opacity, .5s, ease-in-out, 0s );
+	@include box-sizing( border-box );
 	&.hidden {
 		z-index: -1;
 		opacity: 0;
@@ -88,18 +92,30 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 80px;
+	height: $hdr-height;
 	width: 100%;
+	padding-top: $hdr-status-bar;
 	background-color: #000;
 	color: #fff;
 	z-index: 100;
+	@include box-sizing( border-box );
 	h2 {
-		text-align: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0;
+		height: $hdr-body-height;
 	}
 	.burger {
 		position: absolute;
-		left: 10px;
-		top: 20px;
+		height: $hdr-body-height;
+		top: $hdr-status-bar;
+		left: 0px;
+		width: 40px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		cursor: pointer;
 	}
 }
+
