adding muli font

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,19 @@
+@font-face {
+  font-family: 'Muli';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Muli-Regular"), url(../fonts/Muli-Regular.ttf) format("truetype"); }
 body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  font-size: 16px; }
+  font-size: 16px;
+  font-family: 'Muli';
+  -webkit-tap-highlight-color: transparent; }
+
+h2 {
+  font-size: 18px;
+  letter-spacing: 3px; }
 
 #viewport {
   display: block;
@@ -17,7 +28,7 @@ body {
   -moz-transition: margin-left 0.5s ease-in-out 0s;
   -o-transition: margin-left 0.5s ease-in-out 0s;
   transition: margin-left 0.5s ease-in-out 0s;
-  box-shadow: -2px 2px 30px #333333; }
+  box-shadow: -2px 2px 20px #333; }
   #viewport #close-nav {
     display: none;
     position: absolute;
@@ -63,6 +74,7 @@ body {
   left: 0px;
   padding-top: 80px;
   margin-left: -50%;
+  background-color: #4E125D;
   -webkit-transition: margin-left 0.5s ease-in-out 0s;
   -moz-transition: margin-left 0.5s ease-in-out 0s;
   -o-transition: margin-left 0.5s ease-in-out 0s;
@@ -73,9 +85,11 @@ body {
       margin-left: -30%; } }
   #nav-menu a {
     display: block;
-    color: #333;
-    line-height: 40px;
-    font-size: 24px; }
+    color: #BAC361;
+    line-height: 50px;
+    font-size: 20px;
+    padding-left: 10px;
+    text-decoration: none; }
   #nav-menu.reveal {
     margin-left: 0%; }
 
@@ -86,7 +100,7 @@ body {
   height: 80px;
   width: 100%;
   padding-top: 20px;
-  background-color: #000;
+  background-color: #7F518A;
   color: #fff;
   z-index: 100;
   -webkit-box-sizing: border-box;
@@ -103,7 +117,7 @@ body {
     height: 60px;
     top: 20px;
     left: 0px;
-    width: 40px;
+    width: 54px;
     display: flex;
     align-items: center;
     justify-content: center;
