--- a/css/style.scss
+++ b/css/style.scss
@@ -10,14 +10,35 @@ $menu-desktop-width: 30%;
 
 $hdr-bg: #7F518A;
 $hdr-text: #fff;
-$nav-bg: #4E125D;
+$nav-bg: #571E65;
 $nav-text: #BAC361;
 
 @font-face {
 	font-family: 'Muli';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Muli-Regular'), url(../fonts/Muli-Regular.ttf) format('truetype');
+	src: local('Muli-Regular'), url(../../fonts/Muli-Regular.ttf) format('truetype');
+}
+
+@font-face {
+	font-family: 'Muli-Italic';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Muli-Italic'), url(../../fonts/Muli-Italic.ttf) format('truetype');
+}
+
+@font-face {
+	font-family: 'Muli-Bold';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Muli-Bold'), url(../../fonts/Muli-Bold.ttf) format('truetype');
+}
+
+@font-face {
+	font-family: 'Muli-Black';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Muli-Black'), url(../../fonts/Muli-Black.ttf) format('truetype');
 }
 
 body {
@@ -30,13 +51,22 @@ body {
 }
 
 h2 {
-	font-size: 18px;
-	letter-spacing: 3px;
+	font-family: 'Muli-Bold';
+	font-weight: normal;
+	text-transform: uppercase;
+	letter-spacing: 7px;
+	font-size: 14px;
+}
+
+h3 {
+	font-family: 'Muli-Bold';
+	font-weight: normal;
 }
 
 #viewport {
 	display: block;
 	position: absolute;
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	padding: 0;
@@ -105,6 +135,7 @@ h2 {
 		font-size: 20px;
 		padding-left: 10px;
 		text-decoration: none;
+		font-family: 'Muli-Bold';
 	}
 	&.reveal {
 		margin-left: 0%;
