--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ h3 {
   width: 100%;
   height: 100%;
   opacity: 1;
-  padding: 100px 20px 0;
+  padding: 100px 20px 80px;
   background-color: #fff;
   overflow: scroll;
   -webkit-transition: opacity 0.5s ease-in-out 0s;
