--- a/css/style.scss
+++ b/css/style.scss
@@ -106,7 +106,7 @@ h3 {
 	width: 100%;
 	height: 100%;
 	opacity: 1;
-	padding: $hdr-height + 20px 20px 0;
+	padding: $hdr-height + 20px 20px 80px;
 	background-color: #fff;
 	overflow: scroll;
 	@include transition( opacity, .5s, ease-in-out, 0s );
