--- a/css/style.scss
+++ b/css/style.scss
@@ -38,6 +38,18 @@ $highlight: #D2CA78;
 	font-weight: 400;
 	src: local('Muli-Black'), url(../../fonts/Muli-Black.ttf) format('truetype');
 }
+@font-face {
+	font-family: 'Torzu-Regular';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Torzu-Regular'), url(../../fonts/Torzu-Regular.ttf) format('truetype');
+}
+@font-face {
+	font-family: 'Torzu-Mono';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Torzu-Mono'), url(../../fonts/Torzu-Mono.ttf) format('truetype');
+}
 
 body {
 	margin: 0;
@@ -202,3 +214,19 @@ h3 {
 	}
 }
 
+.enoch-reg {
+	font-family: 'Torzu-Regular';
+}
+
+.enoch-mono {
+	font-family: 'Torzu-Mono';
+}
+p.enoch-reg, p.enoch-mono {
+	font-size: 20px;
+	line-height: 28px;
+	text-align: right;
+}
+h3.enoch-reg, h3.enoch-mono {
+	font-size: 24px;
+	text-align: right;
+}
