--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,14 @@ h3 {
     width: 100%;
     height: 100%;
     left: 0;
-    top: 0;
-    z-index: 200; }
+    top: 0; }
   #viewport.nav-open {
     margin-left: 60%; }
     @media only screen and (min-width: 1025px) {
       #viewport.nav-open {
         margin-left: 30%; } }
     #viewport.nav-open #close-nav {
+      z-index: 200;
       display: block; }
   @media only screen and (min-width: 1025px) {
     #viewport {
@@ -91,6 +91,7 @@ h3 {
   width: 100%;
   height: 100%;
   opacity: 1;
+  z-index: 1;
   padding: 100px 20px 80px;
   background-color: #fff;
   overflow: scroll;
@@ -102,10 +103,10 @@ h3 {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
   .page.hidden {
-    z-index: -1;
+    z-index: -10 !important;
     opacity: 0; }
   .page.show {
-    z-index: 1; }
+    z-index: 10 !important; }
   .page.dark {
     background-color: #863D80;
     color: #D2CA78; }
