--- a/css/template.css
+++ b/css/template.css
@@ -102,6 +102,11 @@ h3 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
+  .page a {
+    color: #D2CA78;
+    text-decoration: none; }
+    .page a:hover {
+      text-decoration: underline; }
   .page.hidden {
     z-index: -10 !important;
     opacity: 0; }
@@ -201,4 +206,4 @@ h3.enoch-reg, h3.enoch-mono {
   font-size: 24px;
   text-align: right; }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=template.css.map */
