--- a/css/template.scss
+++ b/css/template.scss
@@ -250,6 +250,8 @@ h3 {
 			font-family: 'Muli-Black';
 			font-size: 28px;
 			margin: 0;
+			letter-spacing: -1px;
+			font-weight: normal!important;
 		}
 		span {
 			color: #fff;
