--- a/css/template.css
+++ b/css/template.css
@@ -126,6 +126,21 @@ h3 {
     .page {
       overflow: visible; } }
 
+form input[type="checkbox"] {
+  opacity: 0; }
+  form input[type="checkbox"] + label:after {
+    content: "\ea53";
+    display: block;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    margin-top: -20px;
+    opacity: 1;
+    z-index: 100;
+    font-family: 'icomoon'; }
+  form input[type="checkbox"]:checked + label:after {
+    content: "\ea52"; }
+
 #nav-menu {
   display: block;
   position: absolute;
