--- a/css/template.css
+++ b/css/template.css
@@ -165,6 +165,7 @@ form input[type="checkbox"] {
     line-height: 50px;
     font-size: 20px;
     padding-left: 20px;
+    padding-right: 10px;
     text-decoration: none;
     font-family: 'Muli-Bold'; }
     #nav-menu a:hover {
@@ -237,18 +238,18 @@ form input[type="checkbox"] {
       color: #fff; }
 
 .enoch-reg {
-  font-family: 'Torzu-Regular'; }
+  font-family: "Torzu-Regular" !important;
+  text-align: right; }
 
 .enoch-mono {
-  font-family: 'Torzu-Mono'; }
+  font-family: "Torzu-Mono" !important;
+  text-align: right; }
 
 p.enoch-reg, p.enoch-mono {
   font-size: 20px;
-  line-height: 28px;
-  text-align: right; }
+  line-height: 28px; }
 
 h3.enoch-reg, h3.enoch-mono {
-  font-size: 24px;
-  text-align: right; }
+  font-size: 24px; }
 
 /*# sourceMappingURL=template.css.map */
