we don't like important

--- a/css/template.css
+++ b/css/template.css
@@ -238,15 +238,21 @@ form input[type="checkbox"] {
       color: #fff; }
 
 .enoch-reg {
-  font-family: "Torzu-Regular" !important;
+  font-family: 'Torzu-Regular';
   text-align: right; }
 
 .enoch-mono {
-  font-family: "Torzu-Mono" !important;
+  font-family: 'Torzu-Mono';
   text-align: right; }
 
 p.enoch-reg, p.enoch-mono {
   font-size: 22px;
   line-height: 28px; }
+
+#nav-menu a.enoch-reg {
+  font-family: 'Torzu-Regular'; }
+
+#nav-menu a.enoch-mono {
+  font-family: 'Torzu-Mono'; }
 
 /*# sourceMappingURL=template.css.map */
