--- a/css/template.css
+++ b/css/template.css
@@ -127,14 +127,15 @@ h3 {
       overflow: visible; } }
 
 form input[type="checkbox"] {
-  opacity: 0; }
+  opacity: 0;
+  margin: 8px 8px 8px 0px; }
   form input[type="checkbox"] + label:after {
     content: "\ea53";
     display: block;
     position: absolute;
     width: 20px;
     height: 20px;
-    margin-top: -20px;
+    margin-top: -22px;
     opacity: 1;
     z-index: 100;
     font-family: 'icomoon'; }
