--- a/css/template.scss
+++ b/css/template.scss
@@ -159,6 +159,7 @@ h3 {
 form {
 	input[type="checkbox"] {
 		opacity: 0;
+		margin: 8px 8px 8px 0px;
 		+ label {
 			&:after {
 				content: "\ea53";
@@ -166,7 +167,7 @@ form {
 				position: absolute;
 				width: 20px;
 				height: 20px;
-				margin-top: -20px;
+				margin-top: -22px;
 				opacity: 1;
 				z-index: 100;
 				font-family: 'icomoon';
