--- a/css/template.scss
+++ b/css/template.scss
@@ -134,16 +134,6 @@ h3 {
 			text-decoration: underline;
 		}
 	}
-	&.hidden {
-		z-index: -10!important;
-		opacity: 0;
-	}
-	&.gone {
-		display: none;
-	}
-	&.show {
-		z-index: 10!important;
-	}
 	&.dark {
 		background-color: $base-light;
 		color: $highlight;
@@ -167,7 +157,7 @@ form {
 				position: absolute;
 				width: 20px;
 				height: 20px;
-				margin-top: -22px;
+				margin-top: -21px;
 				opacity: 1;
 				z-index: 100;
 				font-family: 'icomoon';
@@ -307,4 +297,15 @@ p.enoch-reg, p.enoch-mono {
 }
 #nav-menu a.enoch-mono {
 	font-family: 'Torzu-Mono';
+}
+
+.hidden {
+	z-index: -10!important;
+	opacity: 0;
+}
+.gone {
+	display: none;
+}
+.show {
+	z-index: 10!important;
 }
