--- a/css/template.css
+++ b/css/template.css
@@ -254,9 +254,10 @@ p.enoch-reg, p.enoch-mono {
   opacity: 0; }
 
 .gone {
-  display: none; }
+  display: none !important; }
 
 .show {
-  z-index: 10 !important; }
+  z-index: 10 !important;
+  opacity: 1; }
 
 /*# sourceMappingURL=template.css.map */
