--- a/css/template.css
+++ b/css/template.css
@@ -121,19 +121,28 @@ h3 {
 
 form input[type="checkbox"] {
   opacity: 0;
-  margin: 8px 8px 8px 0px; }
-  form input[type="checkbox"] + label:after {
-    content: "\ea53";
+  margin: 16px 8px;
+  display: block; }
+  form input[type="checkbox"] + label {
     display: block;
     position: absolute;
-    width: 20px;
-    height: 20px;
-    margin-top: -24px;
-    opacity: 1;
-    z-index: 100;
-    font-family: 'icomoon'; }
+    margin-left: 24px;
+    margin-top: -24px; }
+    form input[type="checkbox"] + label:after {
+      content: "\ea53";
+      display: block;
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      margin: -19px 0px 0px -24px;
+      opacity: 1;
+      z-index: 100;
+      font-family: 'icomoon'; }
   form input[type="checkbox"]:checked + label:after {
     content: "\ea52"; }
+form a {
+  display: block;
+  padding: 20px 0px 4px; }
 
 #nav-menu {
   display: block;
