--- a/css/template.scss
+++ b/css/template.scss
@@ -149,15 +149,20 @@ h3 {
 form {
 	input[type="checkbox"] {
 		opacity: 0;
-		margin: 8px 8px 8px 0px;
+		margin: 16px 8px;
+		display: block;
 		+ label {
+			display: block;
+			position: absolute;
+			margin-left: 24px;
+			margin-top: -24px;
 			&:after {
 				content: "\ea53";
 				display: block;
 				position: absolute;
 				width: 20px;
 				height: 20px;
-				margin-top: -24px;
+				margin: -19px 0px 0px -24px;
 				opacity: 1;
 				z-index: 100;
 				font-family: 'icomoon';
@@ -170,6 +175,10 @@ form {
 				}
 			}
 		}
+	}
+	a {
+		display: block;
+		padding: 20px 0px 4px;
 	}
 }
 
