trying another color scheme

--- a/css/template.scss
+++ b/css/template.scss
@@ -9,9 +9,19 @@ $menu-width: 60%;
 $menu-desktop-width: 30%;
 
 //http://paletton.com/#uid=74v0u0klllltmeGpmi0hkoFdkr+
-$base-light: #863D80;
-$base-med: #74276D;
-$base-dark: #590952;
+//$base-light: #863D80;
+//$base-med: #74276D;
+//$base-dark: #590952;
+//$highlight: #D2CA78;
+//$base-light: #614385;
+//$base-med: #4D2D73;
+//$base-dark: #2B0C4F;
+//$highlight: #D2CA78;
+//http://paletton.com/#uid=74e280klllltmeGpmi0hkoFdkr+
+$base-xlight: #587790;
+$base-light: #3F627F;
+$base-med: #2A4F6E;
+$base-dark: #0B2E4B;
 $highlight: #D2CA78;
 
 @font-face {
