--- a/css/template.css
+++ b/css/template.css
@@ -38,7 +38,7 @@ body {
   font-size: 16px;
   font-family: 'Muli';
   -webkit-tap-highlight-color: transparent;
-  background-color: #863D80; }
+  background-color: #3F627F; }
   @media only screen and (min-width: 1025px) {
     body {
       overflow: hidden; } }
@@ -111,7 +111,7 @@ h3 {
     .page a:hover {
       text-decoration: underline; }
   .page.dark {
-    background-color: #863D80;
+    background-color: #3F627F;
     color: #D2CA78; }
     .page.dark p {
       color: #fff; }
@@ -161,7 +161,7 @@ form a {
   left: 0px;
   padding-top: 80px;
   margin-left: -60%;
-  background-color: #590952;
+  background-color: #0B2E4B;
   -webkit-transition: margin-left 0.2s ease-in-out 0s;
   -moz-transition: margin-left 0.2s ease-in-out 0s;
   -o-transition: margin-left 0.2s ease-in-out 0s;
@@ -181,7 +181,7 @@ form a {
     font-family: 'Muli-Bold'; }
     #nav-menu a:hover {
       background-color: #D2CA78;
-      color: #590952; }
+      color: #0B2E4B; }
   #nav-menu.reveal {
     margin-left: 0%; }
 
@@ -192,7 +192,7 @@ form a {
   height: 80px;
   width: 100%;
   padding-top: 20px;
-  background-color: #74276D;
+  background-color: #2A4F6E;
   color: #D2CA78;
   z-index: 100;
   -webkit-box-sizing: border-box;
@@ -228,7 +228,7 @@ form a {
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
-    background-color: #74276D; }
+    background-color: #2A4F6E; }
     .dash-item .dash-icon.large {
       width: 100px;
       height: 100px; }
