--- a/css/template.scss
+++ b/css/template.scss
@@ -1,29 +1,5 @@
 @import 'mixins';
 
-// variables
-$hdr-height: 80px;
-$hdr-status-bar: 20px;
-$hdr-body-height: $hdr-height - $hdr-status-bar;
-
-$menu-width: 60%;
-$menu-desktop-width: 30%;
-
-//http://paletton.com/#uid=74v0u0klllltmeGpmi0hkoFdkr+
-//$base-light: #863D80;
-//$base-med: #74276D;
-//$base-dark: #590952;
-//$highlight: #D2CA78;
-//$base-light: #614385;
-//$base-med: #4D2D73;
-//$base-dark: #2B0C4F;
-//$highlight: #D2CA78;
-//http://paletton.com/#uid=74e280klllltmeGpmi0hkoFdkr+
-$base-xlight: #587790;
-$base-light: #3F627F;
-$base-med: #2A4F6E;
-$base-dark: #0B2E4B;
-$highlight: #D2CA78;
-
 @font-face {
 	font-family: 'Muli';
 	font-style: normal;
@@ -173,6 +149,7 @@ form {
 		margin: 16px 8px;
 		display: block;
 		+ label {
+			cursor: pointer;
 			display: block;
 			position: absolute;
 			margin-left: 24px;
@@ -307,6 +284,16 @@ form {
 		span {
 			color: #fff;
 		}
+	}
+}
+
+.swatch-group {
+	cursor: pointer;
+	.swatch {
+		display: inline-block;
+		width: 20px;
+		height: 20px;
+		@include box-sizing( border-box );
 	}
 }
 
